[package]
name = "nillion-technical"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "auth-server"
path = "src/server.rs"

[[bin]]
name = "auth-client"
path = "src/client.rs"

[dependencies]
num-bigint = "0.4.4"
prost = "0.12.3"
rand = "0.8.5"
tokio = { version = "1.34.0", features = ["full"] }
tonic = "0.10.2"
jsonwebtoken = "9"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4.31"

[build-dependencies]
tonic-build = "0.10"
